# escaper-game-dev

./: .gitignore  CMakeLists.txt  README.md  planning and research.docx  ~$anning and research.docx
src/: main.cpp
src/BaseCharacter/: BaseCharacter.cpp  BaseCharacter.h
src/Enums/: Enums.h
src/Game/: Game.cpp  Game.h
src/GameMenu/: GameMenu.cpp  GameMenu.h
src/GameSettings/: GameSettings.cpp  GameSettings.h
src/GameState/: GameState.cpp  GameState.h
src/Map/: Map.cpp  Map.h
src/PhysicEngine/: PhysicEngine.cpp  PhysicEngine.h
src/Player/: Player.cpp  Player.h
src/RenderEngine/: RenderEngine.cpp  RenderEngine.h
src/Utils/: Utils.cpp  Utils.h
